<resources>
    <string name="app_name">FitLane</string>
    <string name="action_settings">Not Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="workout_label">Workout</string>
    <string name="nutrition_label">Nutrition</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Settings stuff -->
    <string name="logout_button">Log out \n (Back to Login)</string>
    <!--  Log in stuff-->

    <string name="login_textbox">Welcome! Please Log in or Sign up.</string>
    <string name="email_title">Enter Email</string>
    <string name="email_hint">abc@example.com</string>
    <string name="password_title">Enter Password</string>
    <string name="password_hint">Password</string>
    <string name="Or">Or</string>

    <string name="link_to_forgor"><a href="https://www.google.com/">Forgot Password?</a></string>
    <string name="link_to_sign_up"><a href="https://www.google.com/">Sign Up</a></string>
    <string name="skip">Skip</string>
    <string name="login">Log In</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- nav bar stuff-->
    <string name="title_activity_bottom_navbar">BottomNavbar</string>
    <string name="title_workout">Workout</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_profile">Settings</string>


    <!-- Timer stuff-->
    <string name="timer_value">00:00:00</string>
    <string name="timer_start">Start</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_stop">Stop</string>


    <!-- Workout stuff -->
    <string name="history_head"><u>Workout 15/7–2021</u></string>
    <string name="exercise"><b>Exercise:</b></string>
    <string name="sets"><b>Sets:</b></string>
    <string name="squat">Squat</string>
    <string name="deadligt">Deadlift</string>
    <string name="legpress">Legpress</string>
    <string name="legcurl">LegCurl</string>
    <string name="calf">Calf</string>
    <string name="sets3">3</string>
    <string name="sets4">4</string>
    <string name="create_workout">Create Workout</string>
    <string name="newwrokout"><b>New Workout</b></string>
    <string name="quickTrain">Quick Workout</string>
    <string name="enter_workout_name">Enter workout name</string>


</resources>