<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Log_in_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_textbox"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop = "150dp"/>

        <TextView
            android:id="@+id/EmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop = "50dp"/>
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint = "@string/email_hint"/>

        <TextView
            android:id="@+id/PasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop = "10dp"/>
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_marginTop = "5dp"/>


        <TextView
            android:id="@+id/forgor_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/link_to_forgor"
            android:layout_marginTop = "20dp"/>
        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Or"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/link_to_sign_up"
            android:orientation="vertical"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="150dp">


        <Button
            android:id="@+id/Skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:layout_marginEnd="200dp"
            android:ems="5"
            android:text="@string/skip"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/login"
            android:background="@drawable/rounded_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:textColor="@color/white"


            android:text="@string/login" />


    </LinearLayout>

</LinearLayout>