<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="0dp"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timer"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text="@string/timer_value"
        android:textSize="20sp"
        android:padding="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/Timer_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/timer_start"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Timer_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/timer_reset"
        tools:ignore="SpeakableTextPresentCheck" />
    <Button
        android:id="@+id/Timer_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/timer_stop"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>

</LinearLayout>
